fix: fix login with on mobile

--- a/packages/case/client/src/app/auth/views/login/login.component.scss
+++ b/packages/case/client/src/app/auth/views/login/login.component.scss
@@ -63,7 +63,8 @@ width: 100%;
         min-width: 43%;
       }
       @include mobile {
-        min-width: 86%;
+        min-width: 50%;
+        max-width: 380px;
       }
     }
   }
